# stock_web

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
api/: index.py
backend/: config.py  database.py  main.py  models.py  requirements.txt
backend/repositories/: manual.py  price_cache.py  snapshots.py  summary_cache.py  trades.py
backend/routers/: jobs.py  manual.py  portfolio.py  summary.py  trades.py
backend/services/: accounts.py  calculator.py  constants.py  fees.py  fifo.py  prices.py
backend/sql/: schema.sql
backend/sql/migrations/: 20260509_cash_accounts_seed.sql  20260509_price_cache_and_manual_costs.sql  20260511_account_cash_and_invested.sql  20260511_manual_investments.sql  20260511_summary_cache.sql  20260513_capital_movement_options.sql  20260513_capital_movements.sql  20260513_capital_movements_exchange.sql  20260529_manual_investment_cash_amount.sql  20260609_account_daily_snapshots.sql  20260609_account_snapshots.sql
cloudflare/cron-worker/: README.md  worker.js
docs/: cloudflare_cron.md  stock_web_project.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  constants.js  styles.css
frontend/src/api/: client.js
frontend/src/components/: AccountCapitalPanel.jsx  AssetPieChart.jsx  HoldingsTable.jsx  ManualValueEditor.jsx  NavBar.jsx  PriceStatus.jsx  StateBlock.jsx  SummaryCard.jsx  TradeForm.jsx
frontend/src/context/: PrivacyContext.jsx
frontend/src/hooks/: useAsync.js  useManual.js  usePortfolio.js  useSummary.js  useTrades.js
frontend/src/pages/: AddTrade.jsx  (+4 more)
(+1 files in other folders)
