[project]
name = "stock-web"
version = "0.1.0"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "supabase==2.7.0",
    "httpx==0.27.0",
    "pydantic==2.13.1",
    "pydantic-settings==2.3.0",
    "python-dotenv==1.0.0",
    "fugle-marketdata==2.4.1",
]
